Agente Tokio Ver. 1.1 Optimizados xtradedXcutor spatialXcutor Botlogging Seleccion inteligente de pares